--- a/src/render/assets/css/launcher.css
+++ b/src/render/assets/css/launcher.css
@@ -606,6 +606,14 @@ p {
     visibility: visible;
 }
 
+.navItem .actions {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex-shrink: 0;
+    margin-left: auto;
+}
+
 .sidebar .header {
     margin-bottom: 8px;
     font-size: 16px !important;
